Added error msg if no camera

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>QR code scanner & generator</title>
+    <title>QR code scanner & generator (PWA)</title>
+    <meta name="description" content="Progressive web app, QR code scanner & generator">
+    <meta name="author" content="Vincent Humeau">
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
